@@ -1,3 +1,9 @@
+2002-01-17  Jacob Smullyan  <smulloni@smullyan.org>
+
+	* pylibs/PyDO/PyDO.py (PyDO.static_getSome): Fixes for case when
+	an empty list should be returned, and to getTupleWhere and
+	getSomeWhere for cases when arguments are empty.
+
 2002-01-14  Jacob Smullyan  <smulloni@smullyan.org>
 
 	* pylibs/PyDO/operators.py (tupleToSQL): Fixed nasty bug caused by
